fix report images on mobile device

--- a/assets/css/ioda/sass/abstracts/_mixins.scss
+++ b/assets/css/ioda/sass/abstracts/_mixins.scss
@@ -296,6 +296,16 @@ $breakpoint Argument Choices:
       width: 100rem!important;
       height: 46.5rem!important;
       background-size: contain!important;
+
+      @include respond(tab-port) {
+        width: 80rem!important;
+        height: 37.2rem!important;
+      }
+
+      @include respond(screen-870) {
+        width: 50rem!important;
+        height: 23.25rem!important;
+      }
     }
   }
 
@@ -355,5 +365,6 @@ $breakpoint Argument Choices:
 
   & a:link, & a:visited {
     @include textLink;
+    word-break: break-all;
   }
 }
